# bootty

./: .gitignore  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  cloudflare-pages.yml  pages.yml
crates/bootty/: Cargo.toml
crates/bootty-app/: Cargo.toml
crates/bootty-app/benches/: paint_plan.rs
crates/bootty-app/examples/: bare.rs  egui-tabs.rs
crates/bootty-app/src/: app.rs  app_actions.rs  config.rs  config_reload.rs  config_tests.rs  diagnostics.rs  lib.rs  main.rs  native_host.rs  platform.rs  project_catalog.rs  renderer.rs  session_order.rs  shell_env.rs  strings.rs  terminal.rs  theme.rs  tmux.rs  worktree_catalog.rs
crates/bootty-app/src/app/: mod.rs  state.rs
crates/bootty-app/src/input/: bindings.rs  focus.rs  mod.rs  router.rs
crates/bootty-app/src/mux/: backend.rs  config.rs  controller.rs  mod.rs  native.rs  order.rs  process.rs  rmux.rs  sidebar_meta.rs  snapshot.rs  tmux.rs  zellij.rs
crates/bootty-app/src/mux/terminal/: pane.rs  rmux_native.rs  tmux_codec.rs  tmux_control.rs
crates/bootty-app/src/ui/: chrome.rs  dialogs.rs  mod.rs  new_session_picker.rs  picker.rs  sidebar.rs
crates/bootty-app/tests/: bare_terminal_host.rs  kitty_image_state.rs  renderer_frame_contract.rs  renderer_surface_composition.rs  sprite_terminal_pipeline.rs  terminal_background_wgpu.rs  terminal_render_command_boundary.rs  terminal_sprite_face.rs  terminal_text_atlas.rs
crates/bootty-config/: Cargo.toml
crates/bootty-config/src/: color.rs  config.rs  config_tests.rs  lib.rs
crates/bootty-mux/: Cargo.toml
crates/bootty-mux/src/: backend.rs  command.rs  config.rs  controller.rs  lib.rs  native.rs  rmux.rs  sidebar_meta.rs  snapshot.rs  tmux.rs  zellij.rs
crates/bootty-mux/src/terminal/: mod.rs  pane.rs  rmux_native.rs  tmux_control.rs
crates/bootty-render/: Cargo.toml
crates/bootty-render/src/: font_database.rs  lib.rs  paint_plan.rs  renderer_frame.rs  terminal_font_backend.rs  terminal_font_face.rs  terminal_font_shared_grid_set.rs  terminal_font_tables.rs  terminal_render.rs  terminal_sprite.rs  terminal_text.rs  terminal_text_atlas.rs  terminal_wgpu.rs
crates/bootty-render/src/shaders/: terminal_background.wgsl  terminal_image.wgsl  terminal_text.wgsl
crates/bootty-render/src/terminal_sprite/: families.rs  tests.rs
crates/bootty-render/src/terminal_text_atlas/: coretext.rs
crates/bootty-render/src/terminal_text_atlas/tests/: mod.rs  terminal_text_atlas.rs
crates/bootty-render/src/terminal_wgpu/: font_lookup.rs  glyph_draw.rs  image_upload.rs  pipelines.rs  vertices.rs
crates/bootty-render/src/terminal_wgpu/tests/: mod.rs  terminal_wgpu.rs
crates/bootty-runtime/: Cargo.toml
crates/bootty-runtime/assets/: xterm-ghostty.terminfo
crates/bootty-runtime/proptest-regressions/: terminal_session.txt
crates/bootty-runtime/src/: lib.rs  render_source.rs  terminal_session.rs  terminfo.rs
crates/bootty-site/: Cargo.toml
crates/bootty-site/src/: lib.rs
crates/bootty-surface/: Cargo.toml
crates/bootty-surface/src/: geometry.rs
crates/bootty-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/bootty-tauri/src/: lib.rs  main.rs
crates/bootty-tauri/src-ui/src/: doom-engine.ts  doom-keys.ts  doom-site-backend.ts  doom-tab-overlay.ts  fake-shell-backend.ts  main.tsx  rust-site-backend.ts  style.css  terminal-api.ts  terminal-types.ts  webgl-terminal.ts
crates/bootty-tauri/src-ui/src/bootty-site-wasm/: bootty_site.d.ts  bootty_site.js  bootty_site_bg.wasm  bootty_site_bg.wasm.d.ts
crates/bootty-terminal/: Cargo.toml
crates/bootty-terminal/src/: ghostty_ffi_compat.rs  lib.rs  terminal_engine.rs  terminal_frame.rs  terminal_image.rs  terminal_input_model.rs  terminal_palette.rs  terminal_png_decoder.rs
crates/bootty-terminal/src/terminal_engine/tests/: features.rs  images.rs  keys.rs  mod.rs
crates/bootty-terminal/src/terminal_engine/tests/terminal_engine/: focus_tests.rs  mod.rs  mouse_tests.rs  osc_tests.rs  paste_tests.rs  report_tests.rs  style_frame_tests.rs  support.rs  sync_output_tests.rs
crates/bootty-terminal/src/terminal_image/: virtual_placement.rs
crates/bootty-ui/: Cargo.toml
crates/bootty-ui/src/: lib.rs
crates/bootty-winit/: Cargo.toml
crates/bootty-winit/src/: bare_host.rs  direct_input.rs  input.rs  input_binding.rs  input_binding_set.rs  input_keymap.rs  lib.rs  modifier_remap.rs
crates/bootty/src/: lib.rs
docs/: architecture.md  configuration.md  sample-config.toml
scripts/: package-bootty-unix.sh
